--- a/src/style.css
+++ b/src/style.css
@@ -3,35 +3,35 @@
     font-weight: bold;
 }
 
-.accordion-menu a {
+.semantic-accordion-menu .accordion-menu a {
   text-decoration: none;
   color: inherit;
 }
 
-.accordion.ui.styled,
-.accordion.ui.styled .accordion,
-.accordion.ui.styled .title,
-.accordion.ui.styled .accordion .title {
+.semantic-accordion-menu .accordion.ui.styled,
+.semantic-accordion-menu .accordion.ui.styled .accordion,
+.semantic-accordion-menu .accordion.ui.styled .title,
+.semantic-accordion-menu .accordion.ui.styled .accordion .title {
     border-radius: 0;
     box-shadow: none;
 }
 
-.accordion.ui.styled .content.active, .accordion.ui.styled .content {
+.semantic-accordion-menu  .accordion.ui.styled .content.active, .accordion.ui.styled .content {
     margin-top: 0px!important;    
 }
 
-.accordion.ui.styled div.content.active .accordion,
-.accordion.ui.styled div.content .accordion,
-.accordion.ui.styled div.content.active,
-.accordion.ui.styled div.content
+.semantic-accordion-menu .accordion.ui.styled div.content.active .accordion,
+.semantic-accordion-menu .accordion.ui.styled div.content .accordion,
+.semantic-accordion-menu .accordion.ui.styled div.content.active,
+.semantic-accordion-menu .accordion.ui.styled div.content
 {
     margin-top: 0px!important;
     padding-top: 0px!important;
     padding-bottom: 0px!important;
 }
 
-.accordion.ui.styled .content,
-.accordion.ui.styled .accordion .content
+.semantic-accordion-menu .accordion.ui.styled .content,
+.semantic-accordion-menu .accordion.ui.styled .accordion .content
 {
     padding-right: 0;
 }
